syntax = "proto3";

package socialgraph;

option go_package = "github.com/PCBZ/CS6650-Project/services/social-graph-services/socialgraph";

// SocialGraphService manages follow relationships between users
service SocialGraphService {
  // FollowUser creates a follow relationship
  rpc FollowUser(FollowUserRequest) returns (FollowUserResponse);
  
  // UnfollowUser removes a follow relationship
  rpc UnfollowUser(UnfollowUserRequest) returns (UnfollowUserResponse);
  
  // GetFollowers retrieves the list of users who follow a specified user
  rpc GetFollowers(GetFollowersRequest) returns (GetFollowersResponse);
  
  // GetFollowing retrieves the list of users that a specified user follows
  rpc GetFollowing(GetFollowingRequest) returns (GetFollowingResponse);
  
  // GetFollowersCount retrieves the follower count for a user
  rpc GetFollowersCount(GetFollowersCountRequest) returns (GetFollowersCountResponse);
  
  // GetFollowingCount retrieves the following count for a user
  rpc GetFollowingCount(GetFollowingCountRequest) returns (GetFollowingCountResponse);
  
  // CheckFollowRelationship checks if a follow relationship exists
  rpc CheckFollowRelationship(CheckFollowRelationshipRequest) returns (CheckFollowRelationshipResponse);
  
  // BatchCreateFollowRelationships creates multiple follow relationships (for data generation)
  rpc BatchCreateFollowRelationships(BatchCreateFollowRelationshipsRequest) returns (BatchCreateFollowRelationshipsResponse);
}

// FollowUser
message FollowUserRequest {
  int64 follower_user_id = 1;  // The user who wants to follow
  int64 target_user_id = 2;    // The user to be followed
}

message FollowUserResponse {
  bool success = 1;
  string error_message = 2;
  string error_code = 3;
  int64 created_at = 4;  // Unix timestamp
}

// UnfollowUser
message UnfollowUserRequest {
  int64 follower_user_id = 1;  // The user who wants to unfollow
  int64 target_user_id = 2;    // The user to be unfollowed
}

message UnfollowUserResponse {
  bool success = 1;
  string error_message = 2;
  string error_code = 3;
}

// GetFollowers
message GetFollowersRequest {
  int64 user_id = 1;           // User whose followers to retrieve
  int32 limit = 2;             // Maximum number of followers to return (default: 50)
  string next_cursor = 3;      // Pagination cursor (base64 encoded last_evaluated_key)
}

message GetFollowersResponse {
  repeated int64 follower_ids = 1;  // List of follower user IDs
  int32 total_count = 2;            // Total follower count
  string next_cursor = 3;           // Cursor for next page
  bool has_more = 4;                // Whether there are more results
  string error_message = 5;
}

// GetFollowing
message GetFollowingRequest {
  int64 user_id = 1;           // User whose following list to retrieve
  int32 limit = 2;             // Maximum number to return (default: 50)
  string next_cursor = 3;      // Pagination cursor
}

message GetFollowingResponse {
  repeated int64 following_ids = 1;  // List of user IDs being followed
  int32 total_count = 2;             // Total following count
  string next_cursor = 3;            // Cursor for next page
  bool has_more = 4;                 // Whether there are more results
  string error_message = 5;
}

// GetFollowersCount
message GetFollowersCountRequest {
  int64 user_id = 1;
}

message GetFollowersCountResponse {
  int64 user_id = 1;
  int32 followers_count = 2;
  string error_message = 3;
}

// GetFollowingCount
message GetFollowingCountRequest {
  int64 user_id = 1;
}

message GetFollowingCountResponse {
  int64 user_id = 1;
  int32 following_count = 2;
  string error_message = 3;
}

// CheckFollowRelationship
message CheckFollowRelationshipRequest {
  int64 follower_user_id = 1;
  int64 target_user_id = 2;
}

message CheckFollowRelationshipResponse {
  bool is_following = 1;
  string error_message = 2;
}

// BatchCreateFollowRelationships (for data generation)
message BatchCreateFollowRelationshipsRequest {
  repeated FollowRelationship relationships = 1;
}

message FollowRelationship {
  int64 follower_user_id = 1;
  int64 target_user_id = 2;
}

message BatchCreateFollowRelationshipsResponse {
  int32 created_count = 1;
  int32 failed_count = 2;
  bool success = 3;
  string error_message = 4;
}
