syntax = "proto3";

option go_package = "github.com/PCBZ/CS6650-Project/services/timeline-service/proto/user";

package user;

service UserService {
  rpc BatchGetUserInfo(BatchGetUserInfoRequest) returns (BatchGetUserInfoResponse);
}

message BatchGetUserInfoRequest {
  repeated int64 user_ids = 1;  // Required: List of user IDs to retrieve (Max: 100)
}

message BatchGetUserInfoResponse {
  map<int64, UserInfo> users = 1;     // Map of user_id to user information
  repeated int64 not_found = 2;       // List of user IDs that were not found
  string error_code = 3;              // Error code if request failed
  string error_message = 4;           // Error message if request failed
}

message UserInfo {
  int64 user_id = 1;                  // User ID
  string username = 2;                // Username
}